src/objects/Compliance_Review_Part__c.object
<CustomObject>
    <description>Represents a constituent part of a Compliance Review</description>
    <fields>
        <fullName>Comment_Language__c</fullName>
        <description>Allows the selection of the language in which the Variation_Alternative__c field will be written on.</description>
        <label>Comment in Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments regarding this Compliance Review Part</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Review__c</fullName>
        <description>The Commpliance Review that this Compliance Review Part is a constituent part of.</description>
        <label>Compliance Review</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Review Parts</relationshipLabel>
        <relationshipName>Compliance_Review_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The document record that is being attached or referred in this Compliance Review Part.</description>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Compliance Review Parts</relationshipLabel>
        <relationshipName>Compliance_Review_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that indicates if the compliance review part has been reviewed or not.</description>
        <label>Is Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Document_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The standard document&apos;s part that is being reviewed by this Compliance Review Part.</description>
        <label>Standard Document Part</label>
        <referenceTo>Document_Part__c</referenceTo>
        <relationshipLabel>Compliance Review Parts</relationshipLabel>
        <relationshipName>Compliance_Review_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the compliance review part.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforms</fullName>
                </value>
                <value>
                    <fullName>Varies</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Provision_Procedure__c</fullName>
        <description>Procedure of the related document that covers the document part.</description>
        <label>User Provision Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <description>Validity of the compliance review part based on the Effective date of the Document.</description>
        <formula>IF( !Compliance_Review__r.Document__r.Is_Active__c , IF( Compliance_Review__r.Document__r.Effective_Date__c &lt;  TODAY() , &apos;Expired&apos;, &apos;Out of Date&apos;) , 
IF( Is_Reviewed__c , &apos;Reviewed&apos;, null))</formula>
        <label>Validity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variation_Alternative__c</fullName>
        <description>Field to allow a user to insert extra or alternative information in their language of choice.</description>
        <label>Variation alternative comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variation_Comments__c</fullName>
        <description>Comments to explain a variation.</description>
        <label>Variation Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Compliance Review Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMPP-{0000000000}</displayFormat>
        <label>Compliance Review Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Review Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>